routing/circuit-breaking/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  hosts:
  - web-svc
  http:
  - timeout: 3s
    retries:
      attempts: 3
      perTryTimeout: 1s
    route:
    - destination:
        host: web-svc
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  host: web-svc
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 3
      interval: 30s
      baseEjectionTime: 30s
